Bug 1104213 - add stack traces to timeline markers. r=smaug r=vporof